namespace NetworkLib
{
    public enum MessageType
    {
        User,
        PlayerPosition,
        PlayerJoined,
        PlayerLeft,
        Shoot,
        Player,
        Update,
        Message,
        Login,
        JoinQueue,
        LoginResponse,
        MatchJoined
    }
}